[workspace]

resolver = "3"
members = [
    "blobservices_core",
    "blobmanager",
    "blobstore_local",
    "blobgateway",
]

[workspace.dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.9.0", features = ["postgres", "uuid", "runtime-tokio"] }
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }

blobservices_core = { path = "./blobservices_core" }
