[workspace]

resolver = "3"
members = [
    "blobservices_core",
    "blobmanager",
    "blobstore_local",
    "blobgateway", "blobstore_core",
]

[workspace.dependencies]
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
sqlx = { version = "0.9.0", features = ["postgres", "uuid", "runtime-tokio"] }
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
prost = "0.14.4"
uuid = { version = "1.23.5", features = ["v7"] }

blobservices_core = { path = "./blobservices_core" }
blobstore_core = { path = "./blobstore_core" }
