[package]
name = "blobgateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
blobservices_core = { workspace = true }
tracing = { workspace = true }
serde_json = "1.0.150"
serde = { workspace = true }
reqwest = { version = "0.13.4", default-features = false, features = ["native-tls", "stream"] }
prost = { workspace = true }
uuid = { workspace = true }
url = { version = "2.5.8", features = ["serde"] }
