[package]
name = "blobgateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
blobservices_core = { workspace = true }
tracing = { workspace = true }
serde_json = "1.0.150"
serde = { workspace = true }
reqwest = { version = "0.13.4", default-features = false, features = ["native-tls", "stream"] }
prost = { workspace = true }
uuid = { workspace = true }
url = { version = "2.5.8", features = ["serde"] }
hyper = { version = "1.10.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1"] }
http-body-util = "0.1.4"
futures = "0.3.32"
hex = "0.4.3"
hyper-tls = "0.6.0"
