[package]
name = "blobmanager"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
blobservices_core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
prost = "0.14.4"
