[package]
name = "blobservices_core"
version = "0.1.0"
edition = "2024"

[dependencies]
pbjson = "0.9.0"
prost = "0.14.4"
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
axum = { workspace = true }

[build-dependencies]
pbjson-build = "0.9.0"
prost-build = "0.14.4"
