[package]
name = "blobservices_core"
version = "0.1.0"
edition = "2024"

[dependencies]
blake2s_simd = "1.0.4"
crc-fast = "1.10.0"
digest = "0.11.3"
md-5 = "0.11.0"
pbjson = "0.9.0"
prost = "0.14.4"
serde = { workspace = true }
sha1 = "0.11.0"
sha2 = "0.11.0"
sha3 = "0.12.0"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
xxhash-rust = { version = "0.8.16", features = ["xxh64"] }
axum = { workspace = true }

[build-dependencies]
pbjson-build = "0.9.0"
prost-build = "0.14.4"
