[package]
name = "blobstore_local"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
blobservices_core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3.32"
blobstore_core = { workspace = true }
tokio-util = "0.7.18"
